[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-google-community"
description = "An integration package connecting Google Community tools and LangChain"
license = { text = "MIT" }
readme = "README.md"
authors = []

version = "0.0.1"
requires-python = ">=3.10.0,<4.0.0"
dependencies = [
    "langchain-core>=1.0.0,<2.0.0",
    "requests>=2.0.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/langchain-ai/langchain/tree/master/libs/partners/google-community"
Source = "https://github.com/langchain-ai/langchain/tree/master/libs/partners/google-community"

[dependency-groups]
test = [
    "pytest>=7.3.0,<8.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "pytest-asyncio>=0.21.1,<1.0.0",
    "vcrpy>=7.0.0,<8.0.0",
    "langchain-core",
    "langchain-tests",
]
lint = ["ruff>=0.13.1,<0.14.0"]
typing = ["mypy>=1.17.1,<2.0.0", "langchain-core", "types-requests"]

[tool.uv.sources]
langchain-core = { path = "../../core", editable = true }
langchain-tests = { path = "../../standard-tests", editable = true }

[tool.pytest.ini_options]
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5"
asyncio_mode = "auto"
markers = [
    "integration: mark a test as an integration test.",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
